--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "jest-editor-support": "^30.0.2",
